[gd_scene load_steps=7 format=3 uid="uid://6wd6paja8lm5"]

[ext_resource type="Theme" uid="uid://dghlke16ruujw" path="res://src/assets/themes/base_theme.tres" id="1_8suvh"]
[ext_resource type="Script" uid="uid://bop74phvpv6l0" path="res://src/ui/hud/selected_unit_display/selected_unit_display.gd" id="2_b5n3s"]
[ext_resource type="PackedScene" uid="uid://dfsn3pjfakbh1" path="res://src/ui/components/ui_container.tscn" id="2_mdh2a"]
[ext_resource type="Texture2D" uid="uid://oxa1pfv4ndfw" path="res://src/assets/sprites/Puny-Characters/Soldier-Blue.png" id="3_b5n3s"]
[ext_resource type="Texture2D" uid="uid://k5q8hwnbnveo" path="res://src/assets/sprites/container.png" id="3_e48x6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x4jx1"]
atlas = ExtResource("3_b5n3s")
region = Rect2(0, 0, 32, 32)

[node name="SelectedUnitDisplay" type="MarginContainer"]
offset_right = 136.0
offset_bottom = 40.0
theme = ExtResource("1_8suvh")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("2_b5n3s")
containerTexture = ExtResource("3_e48x6")

[node name="UIContainer" parent="." instance=ExtResource("2_mdh2a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="SelectedPlayerIcon" type="TextureRect" parent="UIContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_x4jx1")
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UIContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UIContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="HealthTitle" type="Label" parent="UIContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HP :"

[node name="HealthLabel" type="Label" parent="UIContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "100"

[node name="Slash" type="Label" parent="UIContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "/"

[node name="MaxHealthLabel" type="Label" parent="UIContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "100"

[node name="HBoxContainer2" type="HBoxContainer" parent="UIContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="UIContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Atk:"

[node name="AttackLabel" type="Label" parent="UIContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
text = "20"
